--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,8 +4,8 @@
 @import 'neat/neat';
 @import 'refills/refills';
 
-.param_block{
-	display:none;
+.blue-area, .tools {
+	display:none; //only display when role selected
 }
 
 aside {
@@ -77,6 +77,7 @@ aside {
 
 .role-notes {
 	padding-top: 1em;
+	padding-bottom: 1em;
 }
 
 footer {
