--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -80,6 +80,11 @@ aside {
 	padding-bottom: 1em;
 }
 
+ol.checklist {
+	list-style-type: decimal;
+	
+}
+
 footer {
 	border-top: 1px solid #ccc;
 	padding-top: 2em;
