add profile pics, add to UI description

--- a/scss/styles.css
+++ b/scss/styles.css
@@ -486,6 +486,17 @@ aside {
 .meet-team {
   margin-top: 3em; }
 
+.profile-pic {
+  margin: auto;
+  float: none;
+  width: 7em;
+  height: 7em;
+  margin-bottom: 1em; }
+
+.profile-pic img {
+  border-radius: 50%;
+  width: 100%; }
+
 .blue-area {
   background-color: #e3ebf4; }
 
