--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -78,6 +78,20 @@ aside {
 	margin-top: 3em;
 }
 
+// Meet the Team
+
+.profile-pic {
+	margin: auto;
+	float: none;
+	width: 7em;
+	height: 7em;
+	margin-bottom: 1em;
+}
+.profile-pic img {
+	border-radius: 50%;
+	width: 100%;
+}
+
 .blue-area {
 	background-color: #e3ebf4;
 }
